--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -87,10 +87,10 @@ gradle_build/target_sdk=""
 architectures/armeabi-v7a=false
 architectures/arm64-v8a=true
 architectures/x86=false
-architectures/x86_64=false
+architectures/x86_64=true
 version/code=1
 version/name="1.0"
-package/unique_name="com.kodo.Elemental_Adventure"
+package/unique_name="com.kodo.ElementalAdventure"
 package/name="Elemental adventure"
 package/signed=true
 package/app_category=2
