--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -96,9 +96,9 @@ package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=true
 package/exclude_from_recents=false
-launcher_icons/main_192x192=""
-launcher_icons/adaptive_foreground_432x432=""
-launcher_icons/adaptive_background_432x432=""
+launcher_icons/main_192x192="res://iconexe.ico"
+launcher_icons/adaptive_foreground_432x432="res://iconexe.ico"
+launcher_icons/adaptive_background_432x432="res://iconexe.ico"
 graphics/opengl_debug=false
 xr_features/xr_mode=0
 xr_features/hand_tracking=0
