--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -261,3 +261,41 @@ permissions/write_sms=false
 permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=false
+
+[preset.2]
+
+name="Web"
+platform="Web"
+runnable=true
+dedicated_server=false
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="C:/Users/Miguel/OneDrive/Escritorio/Elemental Adventure HTML/index.html"
+encryption_include_filters=""
+encryption_exclude_filters=""
+encrypt_pck=false
+encrypt_directory=false
+
+[preset.2.options]
+
+custom_template/debug=""
+custom_template/release=""
+variant/extensions_support=false
+vram_texture_compression/for_desktop=true
+vram_texture_compression/for_mobile=false
+html/export_icon=true
+html/custom_html_shell=""
+html/head_include=""
+html/canvas_resize_policy=2
+html/focus_canvas_on_start=true
+html/experimental_virtual_keyboard=false
+progressive_web_app/enabled=false
+progressive_web_app/offline_page=""
+progressive_web_app/display=0
+progressive_web_app/orientation=0
+progressive_web_app/icon_144x144="res://iconexe.ico"
+progressive_web_app/icon_180x180="res://iconexe.ico"
+progressive_web_app/icon_512x512="res://iconexe.ico"
+progressive_web_app/background_color=Color(0, 0, 0, 1)
