--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -22,8 +22,8 @@ debug/export_console_wrapper=1
 binary_format/embed_pck=true
 texture_format/bptc=true
 texture_format/s3tc=true
-texture_format/etc=false
-texture_format/etc2=false
+texture_format/etc=true
+texture_format/etc2=true
 binary_format/architecture="x86_64"
 codesign/enable=false
 codesign/timestamp=true
@@ -84,9 +84,9 @@ gradle_build/use_gradle_build=false
 gradle_build/export_format=0
 gradle_build/min_sdk=""
 gradle_build/target_sdk=""
-architectures/armeabi-v7a=false
+architectures/armeabi-v7a=true
 architectures/arm64-v8a=true
-architectures/x86=false
+architectures/x86=true
 architectures/x86_64=true
 version/code=1
 version/name="1.0"
@@ -284,7 +284,7 @@ custom_template/debug=""
 custom_template/release=""
 variant/extensions_support=false
 vram_texture_compression/for_desktop=true
-vram_texture_compression/for_mobile=false
+vram_texture_compression/for_mobile=true
 html/export_icon=true
 html/custom_html_shell=""
 html/head_include=""
