--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./Elemental Adventure.exe"
+export_path="../../../juegos/Elemental Adventure/Elemental Adventure.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -71,7 +71,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./Elemental Adventure.x86_64"
+export_path="../../../juegos/Elemental Adventure/Elemental Adventure.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -111,7 +111,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Elemental Adventure APK/Elemental Adventure.apk"
+export_path="../../../juegos/Elemental Adventure APK/Elemental Adventure.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -316,7 +316,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Elemental Adventure HTML/index.html"
+export_path="../../../juegos/Elemental Adventure HTML/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
