--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -70,7 +70,8 @@ dedicated_server=true
 custom_features=""
 export_filter="customized"
 customized_files={
-"res://": "strip"
+"res://": "keep",
+"res://Sprites/": "strip"
 }
 include_filter=""
 exclude_filter=""
