--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../juegos/Elemental Adventure/Elemental Adventure.exe"
+export_path="../Elemental Adventure/Elemental Adventure.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -75,7 +75,7 @@ customized_files={
 }
 include_filter=""
 exclude_filter=""
-export_path="../../../juegos/Elemental Adventure/Elemental_adventure_server.exe"
+export_path="../Elemental Adventure/Elemental_adventure_server.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -138,7 +138,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../juegos/Elemental Adventure/Elemental Adventure.x86_64"
+export_path="../Elemental Adventure/Elemental Adventure.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -178,7 +178,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../juegos/Elemental Adventure APK/Elemental Adventure.apk"
+export_path="../Elemental Adventure APK/Elemental Adventure.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -383,7 +383,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../juegos/Elemental Adventure HTML/index.html"
+export_path="../Elemental Adventure HTML/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
