--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -170,6 +170,72 @@ rm -rf \"{temp_dir}\""
 
 [preset.3]
 
+name="Dedicated server Web"
+platform="Windows Desktop"
+runnable=false
+dedicated_server=true
+custom_features=""
+export_filter="customized"
+customized_files={
+"res://": "keep"
+}
+include_filter=""
+exclude_filter=""
+export_path="../../../juegos/Elemental Adventure HTML/index.exe"
+encryption_include_filters=""
+encryption_exclude_filters=""
+encrypt_pck=false
+encrypt_directory=false
+
+[preset.3.options]
+
+custom_template/debug=""
+custom_template/release=""
+debug/export_console_wrapper=1
+binary_format/embed_pck=true
+texture_format/bptc=true
+texture_format/s3tc=true
+texture_format/etc=true
+texture_format/etc2=true
+binary_format/architecture="x86_64"
+codesign/enable=false
+codesign/timestamp=true
+codesign/timestamp_server_url=""
+codesign/digest_algorithm=1
+codesign/description=""
+codesign/custom_options=PackedStringArray()
+application/modify_resources=true
+application/icon="res://icon.ico"
+application/console_wrapper_icon="res://icon.ico"
+application/icon_interpolation=4
+application/file_version=""
+application/product_version="1.0.0.0"
+application/company_name=""
+application/product_name="Elemental Adventure"
+application/file_description=""
+application/copyright="Michael2911"
+application/trademarks=""
+application/export_angle=0
+ssh_remote_deploy/enabled=true
+ssh_remote_deploy/host="user@host_ip"
+ssh_remote_deploy/port="22"
+ssh_remote_deploy/extra_args_ssh=""
+ssh_remote_deploy/extra_args_scp=""
+ssh_remote_deploy/run_script="Expand-Archive -LiteralPath '{temp_dir}\\{archive_name}' -DestinationPath '{temp_dir}'
+$action = New-ScheduledTaskAction -Execute '{temp_dir}\\{exe_name}' -Argument '{cmd_args}'
+$trigger = New-ScheduledTaskTrigger -Once -At 00:00
+$settings = New-ScheduledTaskSettingsSet
+$task = New-ScheduledTask -Action $action -Trigger $trigger -Settings $settings
+Register-ScheduledTask godot_remote_debug -InputObject $task -Force:$true
+Start-ScheduledTask -TaskName godot_remote_debug
+while (Get-ScheduledTask -TaskName godot_remote_debug | ? State -eq running) { Start-Sleep -Milliseconds 100 }
+Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue"
+ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debug -ErrorAction:SilentlyContinue
+Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
+Remove-Item -Recurse -Force '{temp_dir}'"
+
+[preset.4]
+
 name="Web"
 platform="Web"
 runnable=true
@@ -184,7 +250,7 @@ encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
 
-[preset.3.options]
+[preset.4.options]
 
 custom_template/debug=""
 custom_template/release=""
@@ -206,7 +272,7 @@ progressive_web_app/icon_180x180="res://icon.ico"
 progressive_web_app/icon_512x512="res://icon.ico"
 progressive_web_app/background_color=Color(0.670588, 0, 0.729412, 1)
 
-[preset.4]
+[preset.5]
 
 name="Android"
 platform="Android"
@@ -222,7 +288,7 @@ encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
 
-[preset.4.options]
+[preset.5.options]
 
 custom_template/debug=""
 custom_template/release=""
