--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -18,7 +18,7 @@ encrypt_directory=false
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
+debug/export_console_wrapper=0
 binary_format/embed_pck=true
 texture_format/bptc=true
 texture_format/s3tc=true
@@ -85,7 +85,7 @@ encrypt_directory=false
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
+debug/export_console_wrapper=0
 binary_format/embed_pck=true
 texture_format/bptc=true
 texture_format/s3tc=true
@@ -113,7 +113,7 @@ application/export_angle=0
 ssh_remote_deploy/enabled=true
 ssh_remote_deploy/host="user@host_ip"
 ssh_remote_deploy/port="22"
-ssh_remote_deploy/extra_args_ssh=""
+ssh_remote_deploy/extra_args_ssh="--headless"
 ssh_remote_deploy/extra_args_scp=""
 ssh_remote_deploy/run_script="Expand-Archive -LiteralPath '{temp_dir}\\{archive_name}' -DestinationPath '{temp_dir}'
 $action = New-ScheduledTaskAction -Execute '{temp_dir}\\{exe_name}' -Argument '{cmd_args}'
@@ -148,7 +148,7 @@ encrypt_directory=false
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
+debug/export_console_wrapper=0
 binary_format/embed_pck=true
 texture_format/bptc=true
 texture_format/s3tc=true
@@ -229,7 +229,7 @@ encrypt_directory=false
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
+debug/export_console_wrapper=0
 binary_format/embed_pck=true
 texture_format/bptc=true
 texture_format/s3tc=true
@@ -257,7 +257,7 @@ application/export_angle=0
 ssh_remote_deploy/enabled=true
 ssh_remote_deploy/host="user@host_ip"
 ssh_remote_deploy/port="22"
-ssh_remote_deploy/extra_args_ssh=""
+ssh_remote_deploy/extra_args_ssh="--headless"
 ssh_remote_deploy/extra_args_scp=""
 ssh_remote_deploy/run_script="Expand-Archive -LiteralPath '{temp_dir}\\{archive_name}' -DestinationPath '{temp_dir}'
 $action = New-ScheduledTaskAction -Execute '{temp_dir}\\{exe_name}' -Argument '{cmd_args}'
