--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -63,7 +63,7 @@ Remove-Item -Recurse -Force '{temp_dir}'"
 
 [preset.1]
 
-name="Dedicated server"
+name="Windows Desktop Dedicated server"
 platform="Windows Desktop"
 runnable=false
 dedicated_server=true
