--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -63,15 +63,14 @@ Remove-Item -Recurse -Force '{temp_dir}'"
 
 [preset.1]
 
-name="Windows Desktop Dedicated server"
+name="Windows Desktop Dedicated Server"
 platform="Windows Desktop"
 runnable=false
 dedicated_server=true
-custom_features="dedicated_server"
+custom_features=""
 export_filter="customized"
 customized_files={
-"res://": "keep",
-"res://Sprites/": "strip"
+"res://": "keep"
 }
 include_filter=""
 exclude_filter=""
@@ -174,7 +173,7 @@ name="Linux/X11 Dedicated Server"
 platform="Linux/X11"
 runnable=false
 dedicated_server=true
-custom_features="dedicated_server"
+custom_features=""
 export_filter="customized"
 customized_files={
 "res://": "keep"
@@ -278,9 +277,9 @@ architectures/arm64-v8a=true
 architectures/x86=true
 architectures/x86_64=true
 version/code=1
-version/name="1.5"
+version/name="2"
 package/unique_name="com.michael.ElementalAdventure"
-package/name="Elemental adventure"
+package/name="Elemental Adventure"
 package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=true
