--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../juegos/Elemental Adventure/Elemental Adventure.exe"
+export_path="../Elemental Adventure/Elemental Adventure.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -74,7 +74,7 @@ customized_files={
 }
 include_filter=""
 exclude_filter=""
-export_path="../../../juegos/Elemental Adventure/Elemental Adventure Server.exe"
+export_path="../Elemental Adventure/Elemental Adventure Server.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -137,7 +137,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../juegos/Elemental Adventure/Elemental Adventure.x86_64"
+export_path="../Elemental Adventure/Elemental Adventure.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -180,7 +180,7 @@ customized_files={
 }
 include_filter=""
 exclude_filter=""
-export_path="../../../juegos/Elemental Adventure/Elemental Adventure Server.x86_64"
+export_path="../Elemental Adventure/Elemental Adventure Server.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -220,7 +220,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../juegos/Elemental Adventure HTML/index.html"
+export_path="../Elemental Adventure HTML/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -258,7 +258,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../juegos/Elemental Adventure APK/Elemental Adventure.apk"
+export_path="../Elemental Adventure APK/Elemental Adventure.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
