--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -243,9 +243,9 @@ progressive_web_app/enabled=false
 progressive_web_app/offline_page=""
 progressive_web_app/display=0
 progressive_web_app/orientation=0
-progressive_web_app/icon_144x144="res://icon.ico"
-progressive_web_app/icon_180x180="res://icon.ico"
-progressive_web_app/icon_512x512="res://icon.ico"
+progressive_web_app/icon_144x144=""
+progressive_web_app/icon_180x180=""
+progressive_web_app/icon_512x512=""
 progressive_web_app/background_color=Color(0.670588, 0, 0.729412, 1)
 
 [preset.5]
@@ -287,9 +287,9 @@ package/exclude_from_recents=false
 package/show_in_android_tv=false
 package/show_in_app_library=true
 package/show_as_launcher_app=false
-launcher_icons/main_192x192="res://icon.ico"
-launcher_icons/adaptive_foreground_432x432="res://icon.ico"
-launcher_icons/adaptive_background_432x432="res://icon.ico"
+launcher_icons/main_192x192=""
+launcher_icons/adaptive_foreground_432x432="res://Foregound.png"
+launcher_icons/adaptive_background_432x432="res://Background.png"
 graphics/opengl_debug=false
 xr_features/xr_mode=0
 screen/immersive_mode=true
@@ -297,7 +297,7 @@ screen/support_small=true
 screen/support_normal=true
 screen/support_large=true
 screen/support_xlarge=true
-user_data_backup/allow=false
+user_data_backup/allow=true
 command_line/extra_args=""
 apk_expansion/enable=false
 apk_expansion/SALT=""
