--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../juegos/Elemental Adventure/Elemental Adventure.exe"
+export_path="D:/miguel/juegos/Elemental Adventure/Elemental Adventure.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -81,7 +81,7 @@ customized_files={
 }
 include_filter=""
 exclude_filter=""
-export_path="../../../juegos/Elemental Adventure/Elemental Adventure Server.exe"
+export_path="D:/miguel/juegos/Elemental Adventure/Elemental Adventure Server.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -150,7 +150,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../juegos/Elemental Adventure/Elemental Adventure.x86_64"
+export_path="D:/miguel/juegos/Elemental Adventure/Elemental Adventure.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -197,7 +197,7 @@ customized_files={
 }
 include_filter=""
 exclude_filter=""
-export_path="../../../juegos/Elemental Adventure/Elemental Adventure Server.x86_64"
+export_path="D:/miguel/juegos/Elemental Adventure/Elemental Adventure Server.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -241,7 +241,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../juegos/Elemental Adventure HTML/index.html"
+export_path="D:/miguel/juegos/Elemental Adventure HTML/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -283,7 +283,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../juegos/Elemental Adventure APK/Elemental Adventure.apk"
+export_path="D:/miguel/juegos/Elemental Adventure APK/Elemental Adventure.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -413,6 +413,7 @@ permissions/mount_format_filesystems=false
 permissions/mount_unmount_filesystems=false
 permissions/nfc=false
 permissions/persistent_activity=false
+permissions/post_notifications=false
 permissions/process_outgoing_calls=false
 permissions/read_calendar=false
 permissions/read_call_log=false
